fix overlap text

--- a/src/routes/watch/desktop/sport/sport.css
+++ b/src/routes/watch/desktop/sport/sport.css
@@ -2,10 +2,11 @@
   display: inline-block;
   width: 27.5%;
   vertical-align: top;
+  padding: 0 3rem 0 5rem;
 }
 
 .detail__left div {
-  width: 70%;
+  width: 100%;
   height: 100%;
   margin: auto;
 }
